--- a/1.1.0/index.html
+++ b/1.1.0/index.html
@@ -9,7 +9,7 @@
   
   
   <link rel="shortcut icon" href="img/favicon.ico">
-  <title>PMem Spill - master</title>
+  <title>PMem Spill - 1.1.0</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700" />
 
   <link rel="stylesheet" href="css/theme.css" />
@@ -38,7 +38,7 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
     <div class="wy-side-scroll">
       <div class="wy-side-nav-search">
-        <a href="." class="icon icon-home"> PMem Spill - master</a>
+        <a href="." class="icon icon-home"> PMem Spill - 1.1.0</a>
         <div role="search">
   <form id ="rtd-search-form" class="wy-form" action="./search.html" method="get">
     <input type="text" name="q" placeholder="Search docs" title="Type search term here" />
@@ -72,7 +72,7 @@
       
       <nav class="wy-nav-top" role="navigation" aria-label="top navigation">
         <i data-toggle="wy-nav-top" class="fa fa-bars"></i>
-        <a href=".">PMem Spill - master</a>
+        <a href=".">PMem Spill - 1.1.0</a>
       </nav>
 
       
@@ -293,5 +293,5 @@ finish ScalaSparkKmeans bench
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2021-04-29 12:25:31.714041+00:00
+Build Date UTC : 2021-04-29 12:27:20.474997+00:00
 -->
